implement Notification Candidate
