# recruitment-automation-system-ui/src/app/services/models/page-response-notification-response.ts
@@ -1,0 +1,12 @@
+/* tslint:disable */
+/* eslint-disable */
+import { NotificationResponse } from '../models/notification-response';
+export interface PageResponseNotificationResponse {
+  content?: Array<NotificationResponse>;
+  first?: boolean;
+  last?: boolean;
+  number?: number;
+  size?: number;
+  totalElements?: number;
+  totalPages?: number;
+}
